<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/toolbarColor"
    android:fitsSystemWindows="true"
    tools:context="com.example.chua.prelimexam.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="452dp"
        android:theme="@style/CustomCollapse"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:collapsedTitleTextAppearance="@android:color/transparent"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <EditText
                android:id="@+id/filter"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="70dp"
                android:backgroundTint="@color/white"
                android:hint="@string/filter"
                android:textColor="@color/white"
                android:textColorHint="#6d6d6d"
                app:layout_collapseMode="parallax" />

            <ImageView
                android:id="@+id/item_setting"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="310dp"
                android:layout_marginTop="70dp"
                android:src="@drawable/ic_menu"
                android:tint="@color/white"
                app:layout_collapseMode="parallax" />

            <ImageView
                android:id="@+id/profile_photo"
                android:layout_width="185dp"
                android:layout_height="175dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:src="@drawable/bb108537f8f0f33ccd0b212a1299ced0224d4250"
                app:layout_collapseMode="parallax" />

            <TextView
                android:id="@+id/discover_weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="110dp"
                android:text="@string/page"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:layout_collapseMode="parallax" />

            <Button
                android:id="@+id/following"
                android:layout_width="125dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="150dp"
                android:background="@drawable/border_green"
                android:text="@string/follow"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_collapseMode="parallax" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="180dp"
                app:layout_collapseMode="parallax">

                <TextView
                    android:id="@+id/spotify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title"
                    android:text="@string/made"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/greyText"
                    android:textSize="13sp"
                    app:layout_collapseMode="parallax" />
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="top"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/CustomCollapse"
                app:titleTextAppearance="@style/CustomTitle" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/shuffle_button"
        android:text="@string/shuffle_play"
        android:textSize="17sp"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="@drawable/border_radius"
        app:layout_anchor="@id/scroll"
        app:layout_anchorGravity="center|top"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:background="@color/songColor"
        android:layout_height="445dp"
        android:clipToPadding="false"
        android:layout_marginTop="21dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="135dp"
                android:scrollbars="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <TextView
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="38dp"
                android:text="@string/download"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:layout_marginLeft="310dp"/>

            <TextView
                android:id="@+id/includes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="95dp"
                android:text="@string/include"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/download"
                android:background="@color/toolbarColor"
                android:orientation="horizontal"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <ImageButton
                    android:id="@+id/btnHome"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/toolbarColor"
                    android:src="@drawable/ic_home"
                    android:tint="@color/greyText" />

                <ImageButton
                    android:id="@+id/btnBrowse"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/toolbarColor"
                    android:src="@drawable/ic_browse"
                    android:tint="@color/greyText" />

                <ImageButton
                    android:id="@+id/btnSearch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/toolbarColor"
                    android:src="@drawable/ic_search"
                    android:tint="@color/greyText" />

                <ImageButton
                    android:id="@+id/btnRadio"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/toolbarColor"
                    android:src="@drawable/ic_radio"
                    android:tint="@color/greyText" />

                <ImageButton
                    android:id="@+id/btnPlaylist"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/toolbarColor"
                    android:src="@drawable/ic_library"
                    android:tint="@color/greyText" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.design.widget.CoordinatorLayout>
